src/test/ui/issues/issue-7XXXX/issue-72839-error-overflow.stderr
error[E0425]: cannot find value `missing_var` in this scope
  --> $DIR/issue-72839-error-overflow.rs:18:8
   |
LL |     if missing_var % 8 == 0 {}
   |        ^^^^^^^^^^^ not found in this scope

error: aborting due to previous error

For more information about this error, try `rustc --explain E0425`.
